# fortranCmakeTemplate

./: .gitignore  .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  demoProgram.F90
src/demoLib/: CMakeLists.txt  demoLib.F90
src/demoProgram/: CMakeLists.txt  demoProgram.F90
test/pureFort/: CMakeLists.txt  demoTest.F90  test_suite1.F90
test/useCpp/: CMakeLists.txt  demoCppTest.cpp
